--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "core-decorators": "^0.20.0",
+    "create-react-context": "^0.2.3",
+    "d3": "^5.8.0",
+    "mobx": "^4.8.0",
+    "mobx-react": "^5.4.3",
+    "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
+    "numeral": "^2.0.6",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
+    "react-popper": "^1.3.3",
     "react-scripts": "2.1.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.11.1",
+    "eslint-config-fbjs": "^2.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.2",
+    "eslint-plugin-relay": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
