--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "react-popper": "^1.3.3",
     "react-scripts": "2.1.3"
   },
+  "devDependencies": {
+    "eslint-config-fbjs": "^2.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-relay": "^1.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
